--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
+    "@klippa/nativescript-login": "^3.0.0",
+    "@nativescript-community/ui-material-bottom-navigation": "^7.1.4",
     "@nativescript/angular": "^15.0.0",
     "@nativescript/core": "~8.5.0",
     "@nativescript/theme": "~3.0.2",
@@ -21,6 +23,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.2.0",
     "@angular/compiler-cli": "~15.2.0",
+    "@nativescript/android": "8.5.4",
+    "@nativescript/schematics": "^11.2.0",
     "@nativescript/types": "~8.5.0",
     "@nativescript/webpack": "~5.0.14",
     "@ngtools/webpack": "~15.2.0",
