--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@nativescript/angular": "^15.0.0",
     "@nativescript/core": "~8.5.0",
     "@nativescript/theme": "~3.0.2",
+    "bootstrap-icons": "^1.10.5",
+    "@nativescript-community/ui-checkbox": "^2.0.9",
     "rxjs": "~7.6.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@nstudio/nativescript-checkbox": "^2.0.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.2.0",
