--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@klippa/nativescript-login": "^3.0.0",
+    "@nativescript-community/ui-checkbox": "^2.0.9",
     "@nativescript-community/ui-material-bottom-navigation": "^7.1.4",
     "@nativescript/angular": "^15.0.0",
     "@nativescript/core": "~8.5.0",
+    "@nativescript/secure-storage": "^3.0.3",
     "@nativescript/theme": "~3.0.2",
+    "@nstudio/nativescript-checkbox": "^2.0.5",
     "bootstrap-icons": "^1.10.5",
-    "@nativescript-community/ui-checkbox": "^2.0.9",
-    "@auth0/angular-jwt": "^5.0.2",
+    "nativescript-secure-storage": "^2.6.2",
     "rxjs": "~7.6.0",
-    "zone.js": "~0.13.0",
-    "@nstudio/nativescript-checkbox": "^2.0.5"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.2.0",
