--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@nativescript/core": "~8.5.0",
     "@nativescript/secure-storage": "^3.0.3",
     "@nativescript/theme": "~3.0.2",
+    "@ngrx/effects": "^15.2.0",
+    "@ngrx/entity": "^15.2.0",
+    "@ngrx/store": "^15.2.0",
+    "@ngrx/store-devtools": "^15.2.0",
     "@nstudio/nativescript-checkbox": "^2.0.5",
     "bootstrap-icons": "^1.10.5",
     "nativescript-secure-storage": "^2.6.2",
