--- a/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/App_Resources/Android/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
       		android:launchMode="singleTask"
 			android:exported="true">
 
-			<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme" />
+			<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme"
+			
+				
+			 />
+			 
 
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
