--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "@klippa/nativescript-login": "^3.0.0",
     "@nativescript-community/ui-checkbox": "^2.0.9",
+    "@nativescript-community/ui-mapbox": "^6.2.20",
     "@nativescript-community/ui-material-bottom-navigation": "^7.1.4",
     "@nativescript/angular": "^15.0.0",
     "@nativescript/core": "~8.5.0",
