--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/entity": "^15.2.0",
     "@ngrx/store": "^15.2.0",
     "@ngrx/store-devtools": "^15.2.0",
+    "@nstudio/nativescript-cardview": "^2.0.2",
     "@nstudio/nativescript-checkbox": "^2.0.5",
     "bootstrap-icons": "^1.10.5",
     "nativescript-secure-storage": "^2.6.2",
