--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@angular/compiler": "~15.2.0",
     "@angular/core": "~15.2.0",
     "@angular/forms": "~15.2.0",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
@@ -31,7 +32,9 @@
     "bootstrap-icons": "^1.10.5",
     "date-fns": "^2.30.0",
     "nativescript-secure-storage": "^2.6.2",
-    "rxjs": "~7.6.0"
+    "nativescript-windowed-modal": "^7.0.0",
+    "rxjs": "~7.6.0",
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.2.0",
