--- a/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/App_Resources/Android/src/main/AndroidManifest.xml
@@ -28,13 +28,13 @@
 			android:theme="@style/LaunchScreenTheme"
 			android:hardwareAccelerated="true"
       		android:launchMode="singleTask"
-			android:exported="true">
-
+			android:exported="true"
+			android:screenOrientation="portrait">
 			<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme"
-			
-				
+
+
 			 />
-			 
+
 
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
